--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   latex:
     image: texlive/texlive:latest
-    container_name: resume_service
+    container_name: latex_engine
     volumes:
       - ./workspace:/workspace
     working_dir: /workspace
